--- a/package.json
+++ b/package.json
@@ -12,5 +12,11 @@
     "micromark-extension-frontmatter": "^2.0.0",
     "micromark-extension-gfm-table": "^2.0.0"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "jest": "^29.6.4"
+  },
+  "scripts": {
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest"
+  }
 }
