--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,6 @@ jobs:
       - uses: actions/setup-node@v5.0.0
         with:
           node-version: 20
-          cache: yarn
-      - run: yarn install
-      - run: yarn test
+          cache: npm
+      - run: npm ci
+      - run: npm run test
